log
do., 20 de mar. de 2022 19:37:26: 
 tests:  0|6
total_score: 0/70
87804b2
do., 20 de mar. de 2022 21:27:07: 
 list.c | 49 +++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 39 insertions(+), 10 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:3: error: expected ';' before 'return'
   return lista->prev->data;
   ^~~~~~
list.c: In function 'nextList':
list.c:46:11: error: 'List {aka struct List}' has no member named 'next'
   if(lista->next=NULL){return NULL;}
           ^~
list.c:47:23: error: 'List {aka struct List}' has no member named 'next'
   lista->current=lista->next;
                       ^~
list.c:48:15: error: 'List {aka struct List}' has no member named 'next'
   return lista->next->data;
               ^~
list.c: In function 'prevList':
list.c:59:23: error: 'List {aka struct List}' has no member named 'prev'
   lista->current=lista->prev;
                       ^~
list.c:60:15: error: 'List {aka struct List}' has no member named 'prev'
   return lista->prev->data;
               ^~
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'prevList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3cf8ada
do., 20 de mar. de 2022 21:36:13: 
 list.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:3: error: expected ';' before 'return'
   return lista->head->data;
   ^~~~~~
list.c: In function 'nextList':
list.c:46:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(lista->current->next=NULL)
   ^~
list.c:49:15: error: 'List {aka struct List}' has no member named 'next'
   return lista->next->data;
               ^~
list.c: In function 'lastList':
list.c:58:5: error: expected ';' before 'return'
     return lista->tail->data;
     ^~~~~~
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'lastList':
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
69dca05
do., 20 de mar. de 2022 21:38:06: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(lista->current->next=NULL){return NULL;}
   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
81e85ba
do., 20 de mar. de 2022 21:44:09: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:36:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return lista->head;
          ~~~~~^~~~~~
list.c: In function 'nextList':
list.c:46:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(lista->current->next=NULL){return NULL;}
   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
05662ff
do., 20 de mar. de 2022 21:44:50: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(lista->current->next=NULL){return NULL;}
   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
87d565b
do., 20 de mar. de 2022 21:52:34: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fdba601
do., 20 de mar. de 2022 21:53:06: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:36:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return lista->head;
          ~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c0f2103
do., 20 de mar. de 2022 21:53:21: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bfe5e40
do., 20 de mar. de 2022 21:55:47: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e176836
do., 20 de mar. de 2022 21:57:02: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a5b384a
do., 20 de mar. de 2022 21:59:07: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a509c83
do., 20 de mar. de 2022 22:01:14: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:48:3: error: expected ';' before 'return'
   return lista->current->data;
   ^~~~~~
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
01b8f6f
do., 20 de mar. de 2022 22:01:31: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
5a4e428
do., 20 de mar. de 2022 22:04:58: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
0ced2ca
do., 20 de mar. de 2022 22:05:50: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 15/70
1937639
do., 20 de mar. de 2022 22:11:32: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:64:3: error: expected ';' before 'return'
   return lista->current->data;
   ^~~~~~
list.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
48e561d
do., 20 de mar. de 2022 22:11:54: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
ce83ef5
do., 20 de mar. de 2022 22:22:39: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
87e58e3
do., 20 de mar. de 2022 22:23:46: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a975ab4
do., 20 de mar. de 2022 22:24:34: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
c473eec
do., 20 de mar. de 2022 22:25:04: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1c49421
do., 20 de mar. de 2022 22:26:45: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:49:19: error: statement with no effect [-Werror=unused-value]
     lista->current==lista->current->next
     ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
list.c:50:5: error: expected ';' before 'return'
     return local->data;
     ^~~~~~
list.c:46:11: error: variable 'local' set but not used [-Werror=unused-but-set-variable]
     Node* local;
           ^~~~~
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
fc117b9
do., 20 de mar. de 2022 22:27:02: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4574f18
do., 20 de mar. de 2022 22:29:56: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|5
total_score: 15/70
84bdab1
do., 20 de mar. de 2022 22:31:52: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
500e8d4
do., 20 de mar. de 2022 22:33:29: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
596ab46
do., 20 de mar. de 2022 22:33:58: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 15/70
3a91b35
